// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activity target type is null 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Case details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            By
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      />
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display a row for change in date of birth 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edit details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edited by
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                19/09/19
              </p>
              <p>
                15:12
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Edit to person
          </td>
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                <b>
                  Date of birth
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  22/04/62
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  23/04/62
                </b>
              </p>
            </div>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Paul Fox
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display a row for created email (contactType is number) 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edit details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edited by
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                19/09/19
              </p>
              <p>
                15:12
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Edit to contact detail
          </td>
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                <b>
                  Email
                </b>
              </p>
              <p>
                Added
                 
                <b>
                  email@address.com
                </b>
              </p>
            </div>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Paul Fox
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display a row for created phone number (contactType is number) 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edit details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edited by
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                19/09/19
              </p>
              <p>
                15:12
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Edit to contact detail
          </td>
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                <b>
                  Phone
                </b>
              </p>
              <p>
                Added
                 
                <b>
                  07123123123
                </b>
              </p>
            </div>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Paul Fox
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display a row for removed email (contactType is number) 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edit details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edited by
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                19/09/19
              </p>
              <p>
                15:12
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Edit to contact detail
          </td>
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                <b>
                  Email
                </b>
              </p>
              <p>
                Removed
                 
                <b>
                  email@address.com
                </b>
              </p>
            </div>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Paul Fox
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display a row for removed phone number (contactType is number) 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edit details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edited by
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                19/09/19
              </p>
              <p>
                15:12
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Edit to contact detail
          </td>
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                <b>
                  Phone
                </b>
              </p>
              <p>
                Removed
                 
                <b>
                  07123123123
                </b>
              </p>
            </div>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Paul Fox
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display a row for started sole to joint process 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Case details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            By
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                29/10/21
              </p>
              <p>
                7:15
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Process started
          </td>
          <td
            class="govuk-table__cell"
          >
            <p>
              <b>
                New undefined started
              </b>
            </p>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Import
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display a row for updated equality information 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edit details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edited by
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                29/10/21
              </p>
              <p>
                7:15
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Edit to equality information
          </td>
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                <b>
                  Age Group
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  85+
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  Under 16
                </b>
              </p>
            </div>
            <div>
              <p>
                <b>
                  Gender
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  Male (gender different to birth sex: No)
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  Another gender (gender different to birth sex: Yes)
                </b>
              </p>
            </div>
            <div>
              <p>
                <b>
                  Ethnicity
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  Mixed background
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  Another ethnic group
                </b>
              </p>
            </div>
            <div>
              <p>
                <b>
                  Religion or Belief
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  Secular beliefs
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  Another belief
                </b>
              </p>
            </div>
            <div>
              <p>
                <b>
                  Pregnancy or Maternity
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  01/05/21
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  [No entry]
                </b>
              </p>
            </div>
            <div>
              <p>
                <b>
                  Sexual Orientation
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  Heterosexual
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  Another orientation
                </b>
              </p>
            </div>
            <div>
              <p>
                <b>
                  Disabled
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  Yes
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  No
                </b>
              </p>
            </div>
            <div>
              <p>
                <b>
                  Caring Responsibilities
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  Yes
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  No
                </b>
              </p>
            </div>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            John
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display change in Identifications 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edit details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edited by
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                19/09/19
              </p>
              <p>
                15:12
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Edit to person
          </td>
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                <b>
                  Identitifications
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  Passport, GB03654488992 not seen
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  Passport, GB03654488992 seen
                </b>
              </p>
            </div>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Paul Fox
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;

exports[`it should display change in Languages 1`] = `
<div>
  <div>
    <table
      class="govuk-table lbh-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__cell govuk-table__header"
          >
            date
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            category
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edit details
          </th>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            edited by
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row govuk-table__row mtfh-activity-history"
        >
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                19/09/19
              </p>
              <p>
                15:12
              </p>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            Edit to person
          </td>
          <td
            class="govuk-table__cell"
          >
            <div>
              <p>
                <b>
                  Languages
                </b>
              </p>
              <p>
                Previously:
                 
                <b>
                  English (primary)
                </b>
              </p>
              <p>
                Changed to:
                 
                <b>
                  English (primary), Abkhaz
                </b>
              </p>
            </div>
          </td>
          <th
            class="govuk-table__cell govuk-table__header"
          >
            Paul Fox
          </th>
        </tr>
      </tbody>
    </table>
    <nav
      class="lbh-simple-pagination"
    />
  </div>
</div>
`;
